--- a/app/views/home/_devices.html.haml
+++ b/app/views/home/_devices.html.haml
@@ -32,11 +32,10 @@
             %td=dev[:name]
             %td=dev[:type].to_s.titleize
             %td
-              -if dev[:type] != :cpu && privileged?
-                =dev.inspect
-                -#=link_to(status == :disabled ? enable_device_path(dev[:id]): disable_device_path(dev[:id]), remote: true) do
-                -#  %i{class: "icon-check#{status == :disabled ? '-empty': ''}", title: status == :disabled ? 'Enable device': 'Disable device'}
               =status.to_s.titleize
+              -if dev[:type] != :cpu && privileged?
+                =link_to(status == :disabled ? enable_device_path(dev[:type], dev[:id]): disable_device_path(dev[:type], dev[:id]), remote: true) do
+                  %i{class: "icon-check#{status == :disabled ? '-empty': ''}", title: status == :disabled ? 'Enable device': 'Disable device'}<>
             %td= dev[:temperature].nil?? 'N/A': dev[:temperature].round(2)
             %td=mhash_to_s(dev[:mhs_5s])
             %td
