--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -94,7 +94,9 @@
       .container
         .row.text-center
           =app_name
-          is free software created by James Lawrence in his spare time.  If you like it,
+          is free software created by
+          =link_to 'James Lawrence', 'http://www.sqrt4.com', target: '_blank'
+          in his spare time.  If you like it,
           %a{'data-toggle' => 'modal', href: '#donate_modal'}
             %i.icon-btc
             donate
