UI improvements, removed the alert system in favour of more direct feedback.  Better exception when miner connection fails.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,3 +54,11 @@ footer {
   padding-left: 3px;
   padding-right: 3px;
 }
+
+.panel-content {
+  position: relative;
+}
+
+.alert-overlay {
+  text-align: center;
+}
