--- a/app/views/home/_devices.html.haml
+++ b/app/views/home/_devices.html.haml
@@ -10,7 +10,7 @@
         %span{style: 'font-size: 0.8em'}
           -types = [[:cpu, 'CPU'], [:gpu, 'GPU'], [:pga, 'FPGA']].map{|a| count = @devs.count{|d| d[:type] == a[0]};count == 0? nil: pluralize(count,a[1])}.compact.join(', ')
           ="(#{types})"
-  %table.table.table-striped
+  %table.table.table-striped.panel-content
     %thead
       %tr
         %th Name
@@ -34,7 +34,7 @@
             %td
               =status.to_s.titleize
               -if dev[:type] != :cpu && privileged?
-                =link_to(status == :disabled ? enable_device_path(dev[:type], dev[:id]): disable_device_path(dev[:type], dev[:id]), remote: true, data: {refresh: 'devs', perform: 'Toggling device'}) do
+                =link_to(status == :disabled ? enable_device_path(dev[:type], dev[:id]): disable_device_path(dev[:type], dev[:id]), remote: true, data: {refresh: 'devs', perform: 'Toggling deviceh'}) do
                   %i{class: "icon-check#{status == :disabled ? '-empty': ''}", title: status == :disabled ? 'Enable device': 'Disable device'}<>
             %td= dev[:temperature].nil?? 'N/A': dev[:temperature].round(2)
             %td=mhash_to_s(dev[:mhs_5s])
