ajax:complete events not firing properly, need to diagnose and fix.

--- a/app/views/home/_hashchart.html.haml
+++ b/app/views/home/_hashchart.html.haml
@@ -3,6 +3,9 @@
       $(function(){
           Highcharts.setOptions({global:{useUTC: false}});
           chart = new Highcharts.Chart({
+            credits: {
+              enabled: false
+            },
             chart: {
               renderTo: 'hashchart'
             }, title: {
