--- a/app/views/home/_pools.html.haml
+++ b/app/views/home/_pools.html.haml
@@ -1,53 +1,51 @@
--names = ['Accepted', 'Rejected', 'Stale', 'Discarded']
+-names = [t('status.accepted'), t('status.rejected'), t('status.stale'), t('status.discarded')]
 - @pools ||= []
 - @pools.sort! {|a,b| a[:priority] <=> b[:priority]}
-.panel
-  %h3.panel-heading
-    %i.icon-globe
-    Pools
-    %small.text-muted#devices_overview
-      - unless @pools.empty?
-        =pluralize(@pools.length, 'pool')
+.panel{'data-tooltip-container' => 'true'}
+  .panel-heading
+    %h3.panel-title
+      %i.icon-globe
+      =t('pool.plural').titleize
+      %small.text-muted#devices_overview
+        - unless @pools.empty?
+          =pluralize(@pools.length, t('pool.singular'), t('pool.plural'))
   %table.table.table-striped.panel-content
     %thead
       %tr
-        %th.text-center Priority
-        %th URL
-        %th User
-        %th Status
+        %th.text-center=t('title.priority')
+        %th=t('title.url')
+        %th=t('title.user')
+        %th=t('title.status')
         %th=names.join('/')
-        - if privileged?
-          %th.text-center Options
+        %th.text-center=t('title.options')
     %tbody
       -if @pools.length == 0
         %tr
           %td{colspan:6}
-            .text-center No pool information available
+            .text-center=t('pool.none')
       -else
         -@pools.each do |pool|
-          %tr{class: pool[:status] == :alive ? :success: pool[:status] == :disabled ? :warning: :danger, id: "pool#{pool[:id]}"}
+          - pid = "pool#{pool[:id]}"
+          %tr{class: pool[:status] == :alive ? :success: pool[:status] == :disabled ? :warning: :danger, id: pid}
             %td.text-center
               =pool[:priority]
-              -if privileged?
-                %span.priority-change{style: 'position: relative'}
-                  - dolink = pool[:priority] != 0
-                  - if dolink
-                    =link_to pool_up_path(pool[:id]), remote: true, data: {refresh: 'pools', perform: 'Changing pool priority'}, class: 'pri-up' do
-                      %i.icon-angle-up
-                  -else
-                    %a.disabled.pri-up
-                      %i.icon-angle-up
-                  - dolink = pool[:priority] < @pools.length-1
-                  - if dolink
-                    =link_to pool_down_path(pool[:id]), remote: true, data: {refresh: 'pools', perform: 'Changing pool priority'}, class: 'pri-down' do
-                      %i.icon-angle-down
-                  - else
-                    %a.disabled.pri-down
-                      %i.icon-angle-down
+              %span.priority-change{style: 'position: relative'}
+                - if pool[:priority] != 0 and !read_only
+                  =link_to pool_up_path(pool[:id], :json), remote: true, id: "#{pid}_up", data: {refresh: 'pools', perform: t('pool.action.progress.priority')}, class: 'pri-up' do
+                    %i.icon-angle-up.no_underline
+                -else
+                  %a.disabled.pri-up{id: "#{pid}_up", data: {tooltip: pool[:priority] == 0? nil: read_only_reason}}
+                    %i.icon-angle-up.no_underline
+                - if pool[:priority] < @pools.length-1 and !read_only
+                  =link_to pool_down_path(pool[:id], :json), remote: true, id: "#{pid}_down", data: {refresh: 'pools', perform: t('pool.action.progress.priority')}, class: 'pri-down' do
+                    %i.icon-angle-down.no_underline
+                - else
+                  %a.disabled.pri-down{id: "#{pid}_down",data: {tooltip: pool[:priority] >= @pools.length-1 ? nil: read_only_reason}}
+                    %i.icon-angle-down.no_underline
 
-            %td{id: "pool#{pool[:id]}_url"}=pool[:url]
-            %td{id: "pool#{pool[:id]}_user"}=pool[:user]
-            %td=pool[:status].to_s.titleize
+            %td{id: "#{pid}_url"}=pool[:url]
+            %td{id: "#{pid}_user"}=pool[:user]
+            %td=t("status.#{pool[:status].to_s.underscore}")
             %td
               :ruby
                 keys = [:accepted, :rejected, :stale, :discarded]
@@ -57,23 +55,32 @@
                 perc = vals.map{|v| (v.to_f/total) * 100.0}
               .progress{style: 'margin-bottom: 0'}
                 - keys.each_with_index do |key,index|
-                  .progress-bar{style:"width: #{perc[index].round(2)}%", title: "#{names[index]}: #{vals[index]} (#{perc[index].round(2)}%)", class: "progress-bar-#{classes[index]}"}
-            - if privileged?
-              %td.text-center
-                %span.option-link
-                  =link_to(pool[:status] == :disabled ? enable_pool_path(pool[:id]): disable_pool_path(pool[:id]), remote: true, data: {refresh: 'pools', perform: 'Toggling pool'}) do
-                    %i{class: "icon-check#{pool[:status] == :disabled ? '-empty': ''}", title: pool[:status] == :disabled ? 'Enable pool': 'Disable pool'}<>
-                -#%span.option-link
-                -#  =link_to(update_pool_path(pool[:id]), onclick: 'return false', data: {poolEdit: pool[:id]}) do
-                -#    %span{title: 'Settings'}<>
-                -#      %i.icon-wrench
-                %span.option-link
-                  =link_to(delete_pool_path(pool[:id]), remote: true, data: {confirm: 'Are you sure you want to delete this pool?', refresh: 'pools', perform: 'Deleting pool'}) do
-                    %span{title: 'Delete'}<>
-                      %i.icon-trash
-  -if privileged?
-    =link_to(new_pool_path, id: 'new_pool', class: 'btn btn-primary', data: {toggle: 'modal', target: '#pool_settings'}, onclick: 'return false') do
-      %i.icon-plus
-      Add pool
-    %script
-      $('#new_pool').attr('href', $('#new_pool').data('target'));
+                  .progress-bar{id: "pool#{pool[:id]}_#{names[index].downcase}",style:"width: #{perc[index].round(2)}%", data:{tooltip: "#{names[index]}: #{vals[index]} (#{perc[index].round(2)}%)"}, class: "progress-bar-#{classes[index]}"}
+            %td.text-center
+              %span.option-link
+                - icn = "icon-check#{pool[:status] == :disabled ? '-empty': ''}"
+                - if read_only
+                  %a.disabled{id: "#{pid}_toggle", data:{tooltip: read_only_reason}}<>
+                    %i{class: "#{icn} no_underline"}<>
+                - else
+                  =link_to(pool[:status] == :disabled ? enable_pool_path(pool[:id], :json): disable_pool_path(pool[:id], :json), remote: true, id: "pool#{pool[:id]}_toggle", data: {refresh: 'pools', perform: t('pool.action.progress.toggle'), tooltip: pool[:status] == :disabled ? t('pool.action.enable'): t('pool.action.disable')}) do
+                    %i{class: "#{icn} no_underline"}<>
+              %span.option-link
+                - if read_only
+                  %a.disabled{id: "#{pid}_delete",data:{tooltip: read_only_reason}}<>
+                    %i.icon-trash.no_underline
+                - else
+                  =link_to(delete_pool_path(pool[:id], :json), remote: true, id: "pool#{pool[:id]}_delete", data: {confirm: t('pool.confirm.delete'), refresh: 'pools', perform: t('pool.action.progress.delete'), tooltip: t('verb.delete').titleize}) do
+                    %span<>
+                      %i.icon-trash.no_underline
+  .panel-body
+    - if read_only
+      %a#new_pool.btn.btn-primary.disabled{data: {tooltip: read_only_reason}}
+        %i.icon-plus
+        =t('pool.action.add')
+    - else
+      =link_to(new_pool_path, id: 'new_pool', class: 'btn btn-primary', data: {toggle: 'modal', target: '#pool_settings'}, onclick: 'return false') do
+        %i.icon-plus
+        =t('pool.action.add')
+      %script
+        $('#new_pool').attr('href', $('#new_pool').data('target'));
